--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sample site demonstrating cross-site request forgery",
   "main": "index.js",
   "scripts": {
-    "start": "node ./bin/server",
+    "start": "node ./copy-files.js; node ./bin/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "hbs": "^4.0.4",
     "http-errors": "^1.7.2",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.11",
     "morgan": "^1.9.1"
   }
