--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "express-session": "^1.16.1",
     "hbs": "^4.0.4",
     "http-errors": "^1.7.2",
     "jquery": "^3.4.1",
